--- a/bower.json
+++ b/bower.json
@@ -27,6 +27,7 @@
     "angular": "^1.4.9",
     "angular-ui-router": "^0.2.17",
     "angular-jwt": "^0.0.9",
-    "angular-toastr": "^1.7.0"
+    "angular-toastr": "^1.7.0",
+    "tether": "^1.1.1"
   }
 }
