--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app/src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "gulp serve"
+    "start": "gulp serve",
+    "postinstall": "bower install"
   },
   "keywords": [
     "volunteer"
@@ -16,14 +17,18 @@
     "express": "^4.13.4"
   },
   "devDependencies": {
+    "bower": "^1.7.7",
     "browser-sync": "^2.11.1",
-    "del": "^2.2.0",
+    "connect-history-api-fallback": "^1.1.0",
     "gulp": "^3.9.0",
-    "gulp-clean": "^0.3.1",
+    "gulp-angular-templatecache": "^1.8.0",
     "gulp-concat": "^2.6.0",
     "gulp-html-replace": "^1.5.5",
+    "gulp-htmlmin": "^1.3.0",
+    "gulp-jsclosure": "0.0.1",
+    "gulp-ng-annotate": "^1.1.0",
     "gulp-rename": "^1.2.2",
-    "gulp-ruby-sass": "^2.0.6",
+    "gulp-sass": "^2.2.0",
     "gulp-uglify": "^1.5.1"
   }
 }
