--- a/bower.json
+++ b/bower.json
@@ -28,6 +28,8 @@
     "angular-ui-router": "^0.2.17",
     "angular-jwt": "^0.0.9",
     "angular-toastr": "^1.7.0",
-    "tether": "^1.1.1"
+    "tether": "^1.1.1",
+    "font-awesome": "^4.5.0",
+    "angular-animate": "^1.5.0"
   }
 }
