--- a/bower.json
+++ b/bower.json
@@ -30,6 +30,8 @@
     "angular-toastr": "^1.7.0",
     "tether": "^1.1.1",
     "font-awesome": "^4.5.0",
-    "angular-animate": "^1.5.0"
+    "angular-animate": "^1.5.0",
+    "angular-resource": "^1.5.0",
+    "ngInfiniteScroll": "^1.2.2"
   }
 }
