--- a/bower.json
+++ b/bower.json
@@ -32,6 +32,7 @@
     "font-awesome": "^4.5.0",
     "angular-animate": "^1.5.0",
     "angular-resource": "^1.5.0",
-    "ngInfiniteScroll": "^1.2.2"
+    "ngInfiniteScroll": "^1.2.2",
+    "underscore": "^1.8.3"
   }
 }
